examples/test/testpolicy268.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy268
  namespace: namespace120
spec:
  podSelector:
    matchLabels:
      key33: value33
      key17: value18
      key47: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value5
      podSelector:
        matchLabels:
          key10: value25
          key5: value2
          key27: value35
